<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/comment"
        android:layout_width="296dp"
        android:layout_height="118dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/write_comment_text_view_back"
        android:gravity="top"
        android:hint="@string/please_add_your_comment_here"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:background="@color/appBackground"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/comment"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="147dp"
        android:layout_height="40dp"
        android:background="@color/appBackground"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/comment"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

</android.support.constraint.ConstraintLayout>